--- a/softmaxRegression/softmaxHandwritten.ipynb
+++ b/softmaxRegression/softmaxHandwritten.ipynb
@@ -14,7 +14,39 @@
     "\n",
     "不关心值大小，只关心相对大小 --> 输出概率（和为1） --> softmax函数\n",
     "交叉熵常用来衡量两个概率区别，用其作为损失\n",
-    "\"\"\""
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from IPython import display\n",
+    "from d2l import torch as d2l\n",
+    "\n",
+    "batch_size = 256\n",
+    "train_iter, test_iter = d2l.load_data_fashion_mnist(batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''初始化模型参数\n",
+    "展平图像：28 * 28 = 784（未考虑到空间特征）\n",
+    "在softmax回归中，我们的输出与类别一样多。 因为我们的数据集有10个类别，所以网络输出维度为10。 因此，权重将构成一个\n",
+    "784*10的矩阵， 偏置将构成一个1*10的行向量。 与线性回归一样，我们将使用正态分布初始化我们的权重W，偏置初始化为0\n",
+    "'''\n",
+    "num_inputs = 784\n",
+    "num_outputs = 10\n",
+    "\n",
+    "W = torch.normal(0, 0.01, size=(num_inputs, num_outputs), requires_grad=True) # 注意与前面线性回归中做区别\n",
+    "b = torch.zeros(num_outputs, requires_grad=True)"
    ]
   },
   {
@@ -22,12 +54,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''定义softmax操作\n",
+    "\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
