--- a/demo.ipynb
+++ b/demo.ipynb
@@ -11,29 +11,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "size mismatch, got input (3), mat (3x2), vec (3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m Y1 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m])\n\u001b[1;32m      4\u001b[0m X1 \u001b[38;5;241m=\u001b[39m X1\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m Z1 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mmatmul(X1, Y1)\n\u001b[1;32m      6\u001b[0m X1, Y1, Z1\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: size mismatch, got input (3), mat (3x2), vec (3)"
-     ]
+     "data": {
+      "text/plain": [
+       "(tensor([[0, 1, 2]]), tensor([1, 2, 3]), tensor([8]))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Y列向量，matmul第二参数\n",
-    "X1 = torch.arange(6)\n",
+    "X1 = torch.arange(3)\n",
     "Y1 = torch.tensor([1,2,3])\n",
-    "X1 = X1.reshape(3,2)\n",
+    "X1 = X1.reshape(1,3)\n",
     "Z1 = torch.matmul(X1, Y1)\n",
     "X1, Y1, Z1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
