--- a/buildersGuide/parametersManagement.ipynb
+++ b/buildersGuide/parametersManagement.ipynb
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.2505],\n",
-       "        [0.1299]], grad_fn=<AddmmBackward0>)"
+       "tensor([[-0.2606],\n",
+       "        [-0.2089]], grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,16 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OrderedDict({'weight': tensor([[ 0.3294,  0.1147,  0.2975,  0.1485,  0.2110, -0.0629,  0.2663, -0.3516]]), 'bias': tensor([0.0438])})\n",
+      "OrderedDict({'weight': tensor([[-0.2827, -0.2140,  0.3088, -0.2871,  0.1935, -0.3340, -0.0665,  0.1525]]), 'bias': tensor([-0.0847])})\n",
       "Parameter containing:\n",
-      "tensor([[ 0.3294,  0.1147,  0.2975,  0.1485,  0.2110, -0.0629,  0.2663, -0.3516]],\n",
+      "tensor([[-0.2827, -0.2140,  0.3088, -0.2871,  0.1935, -0.3340, -0.0665,  0.1525]],\n",
       "       requires_grad=True)\n",
       "<class 'torch.Tensor'>\n"
      ]
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,8 +94,8 @@
      "text": [
       "<class 'torch.nn.parameter.Parameter'>\n",
       "Parameter containing:\n",
-      "tensor([0.0438], requires_grad=True)\n",
-      "tensor([0.0438])\n"
+      "tensor([-0.0847], requires_grad=True)\n",
+      "tensor([-0.0847])\n"
      ]
     },
     {
@@ -104,7 +104,7 @@
        "False"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.0438])"
+       "tensor([-0.0847])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,6 +163,346 @@
    "source": [
     "'''另一种访问网络参数的方法'''\n",
     "net.state_dict()['2.bias'].data # 访问2层偏置值"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 从嵌套块中收集参数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1719],\n",
+       "        [-0.1719]], grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def block1():\n",
+    "    return nn.Sequential(\n",
+    "        nn.Linear(4, 8),\n",
+    "        nn.ReLU(),\n",
+    "        nn.Linear(8, 4),\n",
+    "        nn.ReLU()\n",
+    "        )\n",
+    "def block2():\n",
+    "    net = nn.Sequential()\n",
+    "    for i in range(4):\n",
+    "        net.add_module(f'block {i}', block1())\n",
+    "    return net\n",
+    "\n",
+    "rgnet = nn.Sequential(block2(), nn.Linear(4, 1))\n",
+    "rgnet(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "查看网络是如何工作的"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequential(\n",
+      "  (0): Sequential(\n",
+      "    (block 0): Sequential(\n",
+      "      (0): Linear(in_features=4, out_features=8, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=8, out_features=4, bias=True)\n",
+      "      (3): ReLU()\n",
+      "    )\n",
+      "    (block 1): Sequential(\n",
+      "      (0): Linear(in_features=4, out_features=8, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=8, out_features=4, bias=True)\n",
+      "      (3): ReLU()\n",
+      "    )\n",
+      "    (block 2): Sequential(\n",
+      "      (0): Linear(in_features=4, out_features=8, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=8, out_features=4, bias=True)\n",
+      "      (3): ReLU()\n",
+      "    )\n",
+      "    (block 3): Sequential(\n",
+      "      (0): Linear(in_features=4, out_features=8, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=8, out_features=4, bias=True)\n",
+      "      (3): ReLU()\n",
+      "    )\n",
+      "  )\n",
+      "  (1): Linear(in_features=4, out_features=1, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rgnet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "由于时分层嵌套的，所以我们也可以通过嵌套列表索引访问"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0.2589,  0.3112, -0.4578,  0.3674, -0.0416,  0.1366,  0.0804, -0.0237])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rgnet[0][1][0].bias.data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 参数初始化\n",
+    "\n",
+    "### 2.1 内置初始化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([ 0.0039,  0.0096, -0.0183, -0.0021]), tensor(0.))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''将所有权重初始化为标准差为0.01的高斯随机变量，将偏置值设置为0'''\n",
+    "def init_normal(m):\n",
+    "    if type(m) == nn.Linear:\n",
+    "        nn.init.normal_(m.weight, mean=0, std=0.01)\n",
+    "        nn.init.zeros_(m.bias)\n",
+    "\n",
+    "net.apply(init_normal)\n",
+    "net[0].weight.data[0], net[0].bias.data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1., 1., 1., 1.]), tensor(0.))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''将所有参数初始化为给定的常数，如初始化为1'''\n",
+    "def init_constant(m):\n",
+    "    if type(m) == nn.Linear:\n",
+    "        nn.init.constant_(m.weight, 1)\n",
+    "        nn.init.zeros_(m.bias)\n",
+    "\n",
+    "net.apply(init_constant)\n",
+    "net[0].weight.data[0], net[0].bias.data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-0.3226,  0.0368, -0.0309,  0.4126])\n",
+      "tensor([[42., 42., 42., 42., 42., 42., 42., 42.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''对不同的块用不同的初试方法\n",
+    "下面使用Xavier初始化第一个神经网络层，然后将第三个神经网络初始化为常量42\n",
+    "'''\n",
+    "def init_xavier(m):\n",
+    "    if type(m) == nn.Linear:\n",
+    "        nn.init.xavier_uniform_(m.weight)\n",
+    "def init_42(m):\n",
+    "    if type(m) == nn.Linear:\n",
+    "        nn.init.constant_(m.weight, 42)\n",
+    "        \n",
+    "net[0].apply(init_xavier)\n",
+    "net[2].apply(init_42)\n",
+    "print(net[0].weight.data[0])\n",
+    "print(net[2].weight.data)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 自定义初始化\n",
+    "\n",
+    "如下权重参数$w$的初始化\n",
+    "$$w \\sim \n",
+    "\\begin{cases} \n",
+    "U(5, 10) & \\text{with probability } \\frac{1}{4} \\\\\n",
+    "0 & \\text{with probability } \\frac{1}{2} \\\\\n",
+    "U(-10, -5) & \\text{with probability } \\frac{1}{4}\n",
+    "\\end{cases}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Init weight torch.Size([8, 4])\n",
+      "Init weight torch.Size([1, 8])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-6.5076, -8.2094,  0.0000,  9.4585],\n",
+       "        [-6.2986,  6.0288, -5.5219, -0.0000]], grad_fn=<SliceBackward0>)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def my_init(m):\n",
+    "    if type(m) == nn.Linear:\n",
+    "        print(\"Init\", *[(name, param.shape)\n",
+    "                        for name, param in m.named_parameters()][0])\n",
+    "        nn.init.uniform_(m.weight, -10, 10)\n",
+    "        m.weight.data *= m.weight.data.abs() >= 5\n",
+    "\n",
+    "net.apply(my_init)\n",
+    "net[0].weight[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([42.0000, -7.2094,  1.0000, 10.4585])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''始终可以直接设置参数'''\n",
+    "net[0].weight.data[:] += 1\n",
+    "net[0].weight.data[0, 0] = 42\n",
+    "net[0].weight.data[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. 参数绑定\n",
+    "\n",
+    "有时希望在多个层间共享参数，定义一个稠密层，使用它的参数来设置另一层的参数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([True, True, True, True, True, True, True, True])\n",
+      "tensor([True, True, True, True, True, True, True, True])\n",
+      "Sequential(\n",
+      "  (0): Linear(in_features=4, out_features=8, bias=True)\n",
+      "  (1): ReLU()\n",
+      "  (2): Linear(in_features=8, out_features=8, bias=True)\n",
+      "  (3): ReLU()\n",
+      "  (4): Linear(in_features=8, out_features=8, bias=True)\n",
+      "  (5): ReLU()\n",
+      "  (6): Linear(in_features=8, out_features=1, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 我们需要给共享层一个名称，以便可以引用它的参数\n",
+    "shared = nn.Linear(8, 8)\n",
+    "net = nn.Sequential(nn.Linear(4, 8), nn.ReLU(),\n",
+    "                    shared, nn.ReLU(),\n",
+    "                    shared, nn.ReLU(),\n",
+    "                    nn.Linear(8, 1))\n",
+    "net(X)\n",
+    "# 检查参数是否相同\n",
+    "print(net[2].weight.data[0] == net[4].weight.data[0])\n",
+    "net[2].weight.data[0, 0] = 100\n",
+    "# 确保它们实际上是同一个对象，而不只是有相同的值\n",
+    "print(net[2].weight.data[0] == net[4].weight.data[0])\n",
+    "print(net)"
    ]
   }
  ],
