--- a/buildersGuide/customLayers.ipynb
+++ b/buildersGuide/customLayers.ipynb
@@ -89,6 +89,104 @@
     "Y = net(torch.rand(4, 8))\n",
     "Y.mean()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 带参数的层"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyLinear(nn.Module):\n",
+    "    def __init__(self, in_units, units):\n",
+    "        super().__init__()\n",
+    "        self.weight = nn.Parameter(torch.randn(in_units, units))\n",
+    "        self.bias = nn.Parameter(torch.randn(units, ))\n",
+    "        \n",
+    "    def forward(self, X):\n",
+    "        linear = torch.matmul(X, self.weight.data) + self.bias.data\n",
+    "        return F.relu(linear)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Parameter containing:\n",
+       "tensor([[-1.1676,  0.8975, -0.4762],\n",
+       "        [ 0.9160, -0.2935, -0.8925],\n",
+       "        [-0.1216,  1.8986,  1.0957],\n",
+       "        [-0.2568, -1.3453, -0.1645],\n",
+       "        [-0.6822,  1.3168,  2.5009]], requires_grad=True)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''实例化MyLinear类并访问参数模型'''\n",
+    "linear = MyLinear(5, 3)\n",
+    "linear.weight\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0000, 2.1421, 2.5267],\n",
+       "        [0.0000, 1.7820, 1.3410]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''可以使用自定义层执行向前传播计算'''\n",
+    "linear(torch.rand(2, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.9272],\n",
+       "        [0.0000]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''还可以使用自定义层构建模型，就像使用内置的全连接层一样使用自定义层'''\n",
+    "net = nn.Sequential(MyLinear(64, 8), MyLinear(8, 1))\n",
+    "net(torch.rand(2, 64))"
+   ]
   }
  ],
  "metadata": {
