--- a/convolutionalNeuralNetworks/multiInputAndMultiOutputChannel.ipynb
+++ b/convolutionalNeuralNetworks/multiInputAndMultiOutputChannel.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "        [104., 120.]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,19 +57,117 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. 多输出通道"
+    "## 2. 多输出通道\n",
+    "\n",
+    "在网络架构中，随着网络层数加深，我们常会增加输出通道维数，通过减少空间分辨率以获得更大的通道深度。我们可以将每个通道看作对不同特征的响应。因为每个通道不是独立学习的，而是为了共同使用而优化的。因此，多输出通道并不仅是学习多个单通道检测器。\n",
+    "\n",
+    "使用$c_i$和$c_o$分别表示输入和输出通道的数目，并让$k_h$和$k_w$为卷积核的高度和宽度。为了获得多个通道输出，我们可以为每个输出通道创建一个形状为$c_i \\times k_h \\times k_w$的卷积核张量，这样的卷积核的形状为$c_o \\times c_i \\times k_h \\times k_w$。在互相关运算中，每个输出通道先获取所有输入通道，再以对应该输出通道的卷积核计算出结果"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''实现计算多个通道的输出互相关函数'''\n",
+    "\n",
     "def corr2d_multi_in_out(X, K):\n",
     "    # 迭代“K”的第0个维度，每次都对输入“X”执行互相关运算。\n",
     "    # 最后将所有结果都叠加在一起\n",
-    "    return "
+    "    return torch.stack([corr2d_multi_in(X, k) for k in K], dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 2, 2, 2])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''通过将核张量K与K+1和K+2链接起来，构造一个足有3个输出通道的卷积核'''\n",
+    "K = torch.stack((K, K+1, K + 2), 0)\n",
+    "K.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 56.,  72.],\n",
+       "         [104., 120.]],\n",
+       "\n",
+       "        [[ 76., 100.],\n",
+       "         [148., 172.]],\n",
+       "\n",
+       "        [[ 96., 128.],\n",
+       "         [192., 224.]]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''对输入张量X与卷积核张量K执行互相关运算。现在的输出包含三个通道，第一个通道的结果与先前输入张量X和多输入单输出通道的结果一致'''\n",
+    "corr2d_multi_in_out(X, K)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. 1*1卷积核\n",
+    "由于使用了最小窗口，失去了卷积层的特有能力，在高度和宽度维度上，识别相邻元素间相互作用的能力。1*1卷积的唯一计算发生在通道上\n",
+    "\n",
+    "更加详细的解释请查阅 https://zh.d2l.ai/chapter_convolutional-neural-networks/channels.html\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''使用全连接层实现1 * 1卷积， 需要对输入和输入数据形状进行调整'''\n",
+    "def corr2d_multi_in_out_1x1(X, K):\n",
+    "    c_i, h, w = X.shape\n",
+    "    c_o = K.shape[0]\n",
+    "    X = X.reshape((c_i, h * w))\n",
+    "    K = K.reshape((c_o, c_i))\n",
+    "    # 全连接层中的矩阵乘法\n",
+    "    Y = torch.matmul(K, X)\n",
+    "    return Y.reshape((c_o, h, w))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''验证功能'''\n",
+    "X = torch.normal(0, 1, (3, 3, 3))\n",
+    "K = torch.normal(0, 1, (2, 3, 1, 1))\n",
+    "\n",
+    "Y1 = corr2d_multi_in_out_1x1(X, K)\n",
+    "Y2 = corr2d_multi_in_out(X, K)\n",
+    "assert float(torch.abs(Y1 - Y2).sum()) < 1e-6\n"
    ]
   }
  ],
