--- a/modernCNN/NiN.ipynb
+++ b/modernCNN/NiN.ipynb
@@ -5,7 +5,15 @@
    "metadata": {},
    "source": [
     "# NiN\n",
-    "2013"
+    "2013\n",
+    "\n",
+    "- 无全连接层\n",
+    "- 交替使用NiN块和步幅为2的最大池化层\n",
+    "  - 逐步减小高宽和增大通道数\n",
+    "- 最后使用全局平均池化得倒输出\n",
+    "  - 其输入通道数是类别数\n",
+    "\n",
+    "参数个数非常少，因为没有全连接层"
    ]
   },
   {
