--- a/modernCNN/batchNormalization.ipynb
+++ b/modernCNN/batchNormalization.ipynb
@@ -2051,6 +2051,15 @@
     "\n",
     "d2l.train_ch6(net, train_iter, test_iter, num_epochs, lr, torch.device(\"mps\"))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. 总结\n",
+    "- 批量归一化固定小批量中的均值和方差，然后学习出适合偏移和缩放\n",
+    "- 可以加速收敛速度，但是一般不改变模型精度"
+   ]
   }
  ],
  "metadata": {
@@ -2069,7 +2078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
