--- a/RNN/RNNScratch.ipynb
+++ b/RNN/RNNScratch.ipynb
@@ -38,25 +38,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "         0, 0, 0, 0],\n",
+      "        [0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "         0, 0, 0, 0]])\n",
+      "28\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(F.one_hot(torch.tensor([0, 2]), len(vocab)))\n",
+    "print(len(vocab))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们每次采样小批量数据形状是二维张量：（批量大小，时间步数）。one_hot函数将这样一个小批量数据转换为三维张量，张量的最后一个维度等于词表的大小（len（vocab））。\n",
+    "\n",
+    "最终获得的形状为（时间步数，批量大小，词表大小）的输出。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0],\n",
-       "        [0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0]])"
+       "torch.Size([5, 2, 28])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "F.one_hot(torch.tensor([0, 2]), len(vocab))"
+    "X = torch.arange(10).reshape((2, 5))\n",
+    "F.one_hot(X.T, 28).shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 初始化模型参数\n",
+    "接下来，我们初始化循环神经网络模型的模型参数。 隐藏单元数num_hiddens是一个可调的超参数。 当训练语言模型时，输入和输出来自相同的词表。 因此，它们具有相同的维度，即词表的大小。"
    ]
   }
  ],
