--- a/RNN/RNNScratch.ipynb
+++ b/RNN/RNNScratch.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
    ],
    "source": [
     "X = torch.arange(10).reshape((2, 5))\n",
-    "F.one_hot(X.T, 28).shape"
+    "F.one_hot(X.T, 28).shape # 做转置的目的是"
    ]
   },
   {
@@ -95,6 +95,46 @@
     "## 2. 初始化模型参数\n",
     "接下来，我们初始化循环神经网络模型的模型参数。 隐藏单元数num_hiddens是一个可调的超参数。 当训练语言模型时，输入和输出来自相同的词表。 因此，它们具有相同的维度，即词表的大小。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_params(vocab_size, num_hiddens, device):\n",
+    "    num_inputs = num_outputs = vocab_size # 输入\n",
+    "    \n",
+    "    def normal(shape):\n",
+    "        return torch.randn(size=shape, device=device) * 0.01\n",
+    "    \n",
+    "    # 隐藏层参数\n",
+    "    W_xh = normal((num_inputs, num_hiddens))\n",
+    "    W_hh = normal((num_hiddens, num_hiddens))\n",
+    "    b_h = torch.zeros(num_hiddens, device=device)\n",
+    "    # 输出层参数\n",
+    "    W_hq = torch.normal((num_hiddens, num_outputs))\n",
+    "    b_q = torch.zeros(num_outputs, device=device)\n",
+    "    # 附加梯度\n",
+    "    params = [W_xh, W_hh, b_h, W_hq, b_q]\n",
+    "    for param in params:\n",
+    "        param.requires_grad_(True)\n",
+    "    return params"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. 循环神经网络模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
