--- a/AttentionMechanism/Transformer.ipynb
+++ b/AttentionMechanism/Transformer.ipynb
@@ -21,11 +21,266 @@
     "多个相同层叠加而成。每层有三个子层（sublayer）\n",
     "- 第一个子层是"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import pandas\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from d2l import torch as d2l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Positionwise FFN\n",
+    "基于位置的前馈网络中对序列中的所有位置的表示进行变换时使用的是一个MLP。\n",
+    "- 输入X（批量大小，时间步数或序列长度，隐藏单元数或特征维度）\n",
+    "- 输出：被两层MLP转换为（批量大小，时间步数，ffn_num_outputs）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PositionWiseFNN(nn.Module):\n",
+    "    '''基于位置的前馈神经网络'''\n",
+    "    def __init__(self, ffn_num_input, ffn_num_hiddens, ffn_num_outputs, **kwargs):\n",
+    "        super(PositionWiseFNN, self).__init__(**kwargs)\n",
+    "        self.dense1 = nn.Linear(ffn_num_input, ffn_num_hiddens)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.dense2 = nn.Linear(ffn_num_hiddens, ffn_num_outputs)\n",
+    "        \n",
+    "    def forward(self, X):\n",
+    "        return self.dense2(self.relu(self.dense1(X)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 3, 8])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''运行例子'''\n",
+    "ffn = PositionWiseFNN(4, 4, 8)\n",
+    "ffn.eval()\n",
+    "ffn(torch.ones((2, 3, 4))).shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Residual Connection and Layer Normalization\n",
+    "残差连接后紧跟层规范化组成。层规范化是基于特征维度进行规范化，在自然语言处理任务中，批量规范化通常不如层规范化效果好。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AddNorm(nn.Module):\n",
+    "    def __init__(self, normalized_shape, dropout, **kwargs):\n",
+    "        super(AddNorm, self).__init__(**kwargs)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.ln = nn.LayerNorm(normalized_shape)\n",
+    "    \n",
+    "    def forward(self, X, Y):\n",
+    "        return self.ln(self.dropout(Y) + X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 3, 4])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''运行例子'''\n",
+    "add_norm = AddNorm([3, 4], dropout=0.5)\n",
+    "add_norm.eval()\n",
+    "add_norm(torch.ones((2, 3, 4)), torch.ones((2, 3, 4))).shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Encoder\n",
+    "先实现一个层，包含两个字层：Multihead Attention + PositionWiseFNN，都使用了ResidualConnection和LayerNormalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EncoderBlock(nn.Module):\n",
+    "    '''编码器块'''\n",
+    "    def __init__(self, key_size, query_size, value_size, num_hiddens,\n",
+    "                 norm_shape, ffn_num_input, ffn_num_hiddens, num_heads,\n",
+    "                 dropout, use_bias = False, **kwargs):\n",
+    "        super(EncoderBlock, self).__init__(**kwargs)\n",
+    "        self.attention = d2l.MultiHeadAttention(key_size, query_size, value_size, num_hiddens,\n",
+    "                                                num_heads, dropout, use_bias)\n",
+    "        self.addnorm1 = AddNorm(norm_shape, dropout)\n",
+    "        self.ffn = PositionWiseFNN(ffn_num_input, ffn_num_hiddens, num_hiddens)\n",
+    "        self.addnorm2 = AddNorm(norm_shape, dropout)\n",
+    "        \n",
+    "    def forward(self, X, valid_lens):\n",
+    "        Y = self.addnorm1(X, self.attention(X, X, X, valid_lens))\n",
+    "        return self.addnorm2(Y, self.ffn(Y))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 100, 24])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''运行例子'''\n",
+    "X = torch.ones((2, 100, 24))\n",
+    "valid_lens = torch.tensor([3, 2])\n",
+    "encoder_blk = EncoderBlock(24, 24, 24, 24, [100, 24], 24, 48, 8, 0.5)\n",
+    "encoder_blk.eval()\n",
+    "encoder_blk(X, valid_lens).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TransformerEncoder(d2l.Encoder):\n",
+    "    def __init__(self, vocab_size, key_size, query_size, value_size,\n",
+    "                 num_hiddens, norm_shape, ffn_num_input, ffn_num_hiddens,\n",
+    "                 num_heads, num_layers, dropout, use_bias=False, **kwargs):\n",
+    "        super(TransformerEncoder, self).__init__(**kwargs)\n",
+    "        self.num_hiddens = num_hiddens\n",
+    "        self.embedding = nn.Embedding(vocab_size, num_hiddens)\n",
+    "        self.pos_encoding = d2l.PositionalEncoding(num_hiddens, dropout)\n",
+    "        self.blks = nn.Sequential()\n",
+    "        for _ in range(num_layers):\n",
+    "            self.blks.add(\n",
+    "                EncoderBlock(num_hiddens, ffn_num_hiddens, num_heads, dropout, use_bias)\n",
+    "            )\n",
+    "    def forward(self, X, valid_lens, *args):\n",
+    "        # 因为位置编码值-1和1之间，\n",
+    "        # 因此嵌入值乘以嵌入维度的平方根进行缩放\n",
+    "        # 然后再与位置编码相加。\n",
+    "        X = self.attention_weights = [None] * len(self.blks)\n",
+    "        for i, blk in enumerate(self.blks):\n",
+    "            X = blk(X, valid_lens)\n",
+    "            self.attention_weights[i] = blk.attention.attention_weights\n",
+    "        return X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Decoder\n",
+    "多个相同层组成，在DecoderBlock类中实现每个层包含三个子层：\n",
+    "解码器自注意力、编码器-解码器注意力、position wise FNN。也需要Residual Connection和Layer Normalization。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DecoderBlock(nn.Module):\n",
+    "    '''解码器块'''\n",
+    "    def __init__(self, key_size, query_size, value_size, num_hiddens,\n",
+    "                 norm_shape, ffn_num_input, ffn_num_hiddens, num_heads,\n",
+    "                 dropout, i, **kwargs):\n",
+    "        super(DecoderBlock, self).__init__(**kwargs)\n",
+    "        self.i = i\n",
+    "        self.attention1 = d2l.MultiHeadAttention(\n",
+    "            key_size, query_size, value_size, num_hiddens, num_heads, dropout\n",
+    "        )\n",
+    "        self.addnorm1 = AddNorm(norm_shape, dropout)\n",
+    "        self.attention2 = d2l.MultiHeadAttention(\n",
+    "            key_size, query_size, value_size, num_hiddens, num_heads, dropout\n",
+    "        )\n",
+    "        self.addnorm2 = AddNorm(norm_shape, dropout)\n",
+    "        self.fnn = PositionWiseFNN(ffn_num_input, ffn_num_hiddens, num_hiddens)\n",
+    "        self.addnorm3 = AddNorm(norm_shape, dropout)\n",
+    "        \n",
+    "    def forward(self, X, state):\n",
+    "        enc_outputs, enc_valid_len = state[0], state[1]\n",
+    "        # 训练阶段，输出序列所有词元都在同一时间处理\n",
+    "        # 因此sate[2][self.i]初始化为None\n",
+    "        # 预测阶段，输出序列通过词元一个接一个编码\n",
+    "        # 因此sate[2][self.i]包含着直到当前时间步的第i个块编码的输出表示\n",
+    "        if state[2][self.i] is None:\n",
+    "            key_values = X\n",
+    "        return"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
